# ECG

./: EmotionModel.ipynb  README.md  data_processing.ipynb  driver_file.ipynb  heartbeat.ino  pyproject.toml
CV_display/: data_processing.ipynb  driver_file.ipynb  driver_file.py  experimentation.ipynb  index.html  local_webcam_driver.py  main_model.ipynb  model_testings.ipynb
CV_display/.ipynb_checkpoints/: data_processing-checkpoint.ipynb
website/client/: package-lock.json  package.json
website/client/public/: index.html
website/client/src/: App.css  App.js  app.scss  index.css  index.js
website/client/src/components/: Head.js  Heartrate.js  head.scss
website/client/src/components/Emotion/: Emotion.js
website/client/src/components/Footer/: Footer.js  footer.scss
website/client/src/components/Heartrate/: Heartrate.js  Rate.js  heartrate.scss
website/client/src/components/Profile/: Profile.js  profile.scss
website/server/: index.js  package.json
